--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,9 @@ Light green: #7ed56f
 Medium green: #55c57a
 Dark green: #28b485
 */
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
