--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,16 @@ body{
     top: 40%;
     left: 50%;
     transform: translate(-45%, -40%);
+    text-align: center;
 }
 
 .heading-primary{
     color: #fff; /*#dfecff*/
     text-transform: uppercase;
+    backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    margin-bottom: 50px;
 }
 
 .heading-primary-main{
@@ -107,13 +112,80 @@ body{
     }
 
     80%{
-        transform: translateX(-5px);
+        transform: translateX(-3px);
     }
 
     100%{
         opacity: 1;
         transform: translate(0);
     }
+}
+
+@keyframes moveInBottom{
+    0%{
+        opacity: 0;
+        transform: translateY(30px);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+.btn:link, .btn:visited{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 2px;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 1000px;
+    transition: all .2s;
+    position: relative;
+}
+
+.btn:hover{
+    transform: translateY(-3px);  
+    box-shadow: 0 10px 20px rgba(35, 35, 35, 0.2);  
+}
+
+.btn:active{
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(30, 30, 30, 0.2);
+}
+
+.btn::after{
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+}
+
+.btn:hover::after{
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+.btn-animated{
+    animation: moveInBottom .5s ease-out 1s;
+    animation-fill-mode: backwards;
+}
+
+.btn-white{
+    background-color: #fff;
+    color: #777;
+}
+
+.btn-white::after{
+    background-color: #fff;
 }
 
 /*
